<resources>
    <string name="app_name">MyFoody</string>
    <string name="content_desc_imgView"></string>

    <string name="TEXT_TITLE_TOOLBAR_DOMAIN">Danh mục</string>

    <string name="TEXT_NEWEST">Mới nhất</string>
    <string name="TEXT_CATEGORY">Danh mục</string>
    <string name="TEXT_AREAS">Khu vực</string>
    <string name="TEXT_WHERE2GO">Ở đâu</string>
    <string name="TEXT_WHAT2DO">Ăn gì</string>

    <string name="TEXT_PLUS_MENU_COUPON">Quét mã Coupon</string>
    <string name="TEXT_PLUS_MENU_UPLOAD_IMAGE">Đăng ảnh</string>
    <string name="TEXT_PLUS_MENU_CHECK_IN">Check-in</string>
    <string name="TEXT_PLUS_MENU_WRITE_REVIEW">Viết bình luận</string>
    <string name="TEXT_PLUS_MENU_ADD_PLACE">Thêm địa điểm</string>

    <string name="TEXT_ACTION_CANCEL">Huỷ</string>
    <string name="TEXT_ACTION_CLOSE">Đóng</string>

    <string name="TEXT_BOOK_AND_DELIVERY">Giao hàng và đặt chỗ</string>
    <string name="TEXT_DELIVERY">Giao hàng</string>
    <string name="TEXT_BOOK">Đặt chỗ</string>

    <string name="TEXT_DOMAIN_FOOD">Ăn uống</string>
    <string name="TEXT_DOMAIN_TRAVEL">Du lịch</string>
    <string name="TEXT_DOMAIN_WEDDING">Cưới hỏi</string>
    <string name="TEXT_DOMAIN_HEALTHY">Đẹp khoẻ</string>
    <string name="TEXT_DOMAIN_RELAX">Giải trí</string>
    <string name="TEXT_DOMAIN_SHOPPING">Mua sắm</string>
    <string name="TEXT_DOMAIN_EDU">Giáo dục</string>
    <string name="TEXT_DOMAIN_SERVICE">Dịch vụ</string>

    <string name="TEXT_CHANGE_CITY">Đổi tỉnh thành</string>
    <string name="TEXT_STREET">Đường</string>
    <string name="TITLE_CHOOSE_PROVINCE">Chọn Tỉnh/Thành phố</string>
    <string name="TEXT_ACTION_DONE">Xong</string>
    <string name="ACTION_QUICKSEARCH">Tìm nhanh</string>
    <string name="ACTION_AUTODETECT_LOCATION">Tự động xác định vị trí</string>
    <string name="ACTION_CHANGE_COUNTRY">Đổi quốc gia</string>
    <string name="ACTION_DEFAULT">Mặc định</string>

    <string name="RES_OPEN">Đang mở cửa</string>
    <string name="RES_CLOSE">Chưa mở cửa</string>
    <string name="REQUEST_REVIEW">Hãy là người đầu tiên đánh giá</string>

    <string name="TEXT_PLACE_COLLECTION_BAR">Bộ sưu tập địa điểm</string>
    <string name="TEXT_PHOTO_COLLECTION_BAR">Bộ sưu tập ảnh</string>

    <string name="TEXT_NO_RESTAURANT">Chưa có địa điểm nào</string>

    <string name="TEXT_LOGIN_WITH_FACEBOOK">Facebook</string>
    <string name="TEXT_LOGIN_WITH_GOOGLE">Google</string>
    <string name="TEXT_LOGIN_WITH_YAHOO">Yahoo</string>
    <string name="TEXT_LOGIN_WITH_TWITTER">Twitter</string>
    <string name="TEXT_LOGIN_WITH_PHONE_NUMBER">Đăng nhập với số điện thoại</string>
    <string name="TEXT_LOGIN_WITH_EMAIL">Đăng nhập với Email</string>
    <string name="TEXT_LOGIN_NO_USE_INFO">Chúng tôi sẽ không sử dụng thông tin của bạn với bất kỳ mục đích nào </string>
    khác
    <string name="TEXT_REGISTER">Đăng ký</string>
    <string name="TEXT_LOGIN_TO_APP">Đăng nhập Foody</string>


    <string name="TEXT_ERR_VALID_EMAIL">Email sai định dạng</string>
    <string name="TEXT_ERR_VALID_PASS_LENGHT">Mật khẩu có ít nhất 4 kí tự</string>
    <string name="TEXT_ERR_VALID_PASS_CONFIRM">Mật khẩu không trùng</string>
    <string name="TEXT_RES_SUCCESS">Đăng kí thành công</string>
    <string name="TEXT_RES_FAIL">Đăng kí thất bại. Vui lòng thử lại</string>


    <string name="TEXT_USER">Tên đăng nhập</string>
    <string name="TEXT_LAST_NAME">Tên</string>
    <string name="TEXT_FIRST_NAME">Họ</string>
    <string name="TEXT_MANAGE_PHONE">Quản lý số điện thoại</string>
    <string name="TEXT_MANAGE_ADDRESS">Quản lý điạ chỉ</string>
    <string name="TEXT_DATE_JOIN">Ngày tham gia</string>
    <string name="TEXT_MARRY_STATUS">Hôn nhân</string>
    <string name="TEXT_DATE_OF_BIRTH">Ngày sinh</string>
    <string name="TEXT_ACTION_SAVE">Lưu lại</string>
    <string name="TEXT_ERR_VALID_DATE">Ngày không hợp lệ</string>
    <string name="TEXT_AVATAR_AND_COVER">Ảnh đại diện &amp; bìa</string>
    <string name="TEXT_PASSWORD">Mật khẩu</string>
    <string name="TEXT_MANAGE_SESSION">Quản lý phiên hoạt động</string>

    <string name="TEXT_AVATAR">HÌNH ĐẠI DIỆN</string>
    <string name="TEXT_COVER">HÌNH COVER</string>
    <string name="TEXT_CHANGE_AVATAR">Đổi ảnh đại diện</string>
    <string name="TEXT_CHANGE_COVER">Đổi ảnh bìa</string>
    <string name="TEXT_ACTION_SAVE_CHANGE">Lưu thay đổi</string>
    <string name="TEXT_EMAIL_REGISTER">Email đăng ký:</string>
    <string name="TEXT_UPDATE_INFO_SUCCESS">Thông tin của bạn đã được cập nhật!</string>
    <string name="TEXT_UPDATE_INFO_FAIL">Lỗi xảy ra khi cập nhật thông tin của bạn. Vui lòng thử lại!</string>
    <string name="TEXT_SELECT_PHOTO_FROM_CAMERA">Chụp ảnh</string>
    <string name="TEXT_SELECT_PHOTO_FROM_GALLERY">Chọn hình từ thư viện</string>
    <string name="TEXT_LOG_OUT">ĐĂNG XUẤT</string>
    <string name="TEXT_LOG_OUT_MESS">Bạn có muốn đăng xuất khỏi Foody?</string>
    <string name="TEXT_REQUEST_PERMISSION">Bạn cần cho phép quyền vào thiết bị để thực hiện chức năng này</string>
    <string name="TEXT_YES">Có</string>
    <string name="TEXT_NO">Không</string>
    <string name="TEXT_PERMISSION_STORAGE">"Truy cập ảnh, phương tiện và tệp trên thiết bị của bạn"</string>
    <string name="TEXT_UPDATE_INFO_SUCCESS_AVATAR">Cập nhật tài khoản thành công</string>

    <string name="TEXT_CHOOSE_PROVINCE">Chọn Tỉnh/Thành phố</string>
    <string name="TEXT_CHOOSE_DISTRICT">Chọn quận</string>
    <string name="TEXT_REQUIRED_INFORMATION">Thông tin bắt buộc</string>
    <string name="TEXT_BUSSINESS_NAME">Tên địa điểm *</string>
    <string name="TEXT_BUSSINESS_TYPE">Loại hình địa điểm *</string>
    <string name="TEXT_ADDRESS">Địa chỉ *</string>
    <string name="TEXT_MORE_INFO">Thông tin khác</string>
    <string name="TEXT_MAP_LOCATION">Vị trí bản đồ</string>
    <string name="TEXT_OPEN_TIME">Giờ mở cửa</string>
    <string name="TEXT_PRICE">Mức giá</string>
    <string name="TEXT_MIN_PRICE">Giá thấp nhất</string>
    <string name="TEXT_MAX_PRICE">Giá cao nhất</string>
    <string name="TEXT_SHORT_DESCRIPTION">Mô tả ngắn</string>
    <string name="TEXT_ADD_NEW_PLACE">Thêm địa điểm</string>
    <string name="TEXT_ACTION_SEND">Gửi</string>
    <string name="TEXT_PHONE_NUMBER">Số điện thoại</string>
    <string name="title_activity_maps">Map</string>
    <string name="TEXT_PERMISSION_GPS">"Truy cập vị trí của thiết bị này"</string>
    <string name="TEXT_MY_LOCATION">Vị trí của tôi</string>
    <string name="TEXT_PLACE">Địa điểm</string>
    <string name="TEXT_CHOOSE_PLACE">Chọn địa điểm</string>
    <string name="TEXT_ACTION_SELECT">Chọn</string>
    <string name="TEXT_NO_MEDIA_SELECT">Bạn chưa chọn file</string>
    <string name="TEXT_ACTION_BOQUA">BỎ QUA</string>
    <string name="TEXT_NOT_FOUND_ADDRESS">Không tìm thấy địa chỉ</string>

</resources>
